--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>{%block title %} {%endblock %}</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <body>
+<div class="container-fluid">
     {% include 'header.html' %}
-    {% block headmessage %} {% endblock %}
-    <hr>
-    {%block content%} {% endblock %}
-    <hr>
-    {% include 'footer.html' %}
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            {% block headmessage %} {% endblock %}
+        </div>
+        <div class="panel-body">
+            {%block content%} {% endblock %}
+        </div>
+        <div class="panel-footer">
+            {% include 'footer.html' %}
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
