--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,14 @@
    {% extends 'base.html' %}
    {% block title %}hello my name:Abliz {% endblock %}
         {% block headmessage %}
-            <h3 ></h3>
-
+            <h3>本站文章列表</h3>
+    {% endblock %}
+    {% block content %}
+        {% for post in posts %}
+            <p style="font-size: 14pt;font-weight: bold">
+                <a href="/post/{{post.slug}}">{{ post.title }}</a>
+            </p>
+    {% endfor %}
+    {% endblock %}
 </body>
 </html>
