--- a/templates/post.html
+++ b/templates/post.html
@@ -5,12 +5,14 @@
     <title>hello my blog</title>
 </head>
 <body>
-    <h1>{{post.title}}</h1>
-    <hr>
-        <p style="font-size: 12pt;letter-spacing: 2pt">
-            {{post.body}}
-        </p>
-    <hr>
-    <h3><a href="/">home</a></h3>
+    {% extends 'base.html' %}
+    {% block title %} {{ post.title }} - 文学天地 {% endblock %}
+    {% block headmessage %}
+        <h3>{{ post.title }}</h3>
+    <a href="/">回首页</a>
+    {% endblock %}
+    {% block content %}
+        <p style="font-size: 12pt;letter-spacing: 2pt">{{ post.body }}</p>
+    {% endblock %}
 </body>
 </html>
